mern/mern.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mern-app
  namespace: mernstack
spec:
   replicas: 3
   selector:
    matchLabels:
      app: mern
      tier: backend
      track: stable
   template:
    metadata:
      labels:
        app: mern
        tier: backend
        track: stable
    spec:
      containers:
      - name: app-express
        image: gerrome/mern-stack-app_server:1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000    

---
apiVersion: v1
kind: Service 
metadata:
  name: srv-mern
  namespace: mernstack
spec:
  selector:
     app: mern
#  type: LoadBalancer
  ports:
     - protocol: TCP
       port: 80
       targetPort: 5000
 #      nodePort: 30000
