mern/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
   rules:
   - host: victorsapp.com
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: srv-mern
            port: 
              number: 80
